# phylofetch

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  PLANNING.md  README.md  app.py  environment.yml  pyproject.toml
docs/: decisions.md  method_references.md  planning.md
pages/: 0_Project_Setup.py  10_BUSCO_Phylogenomics.py  11_Tree_Visualization.py  12_Orthology_Check.py  1_Assembly_Manager.py  2_Exonerate.py  2_Loci_Extraction.py  2_NCBI_References.py  3_Alignment_Prep.py  3_ITSx_rDNA.py  4_BUSCO_Phylogenomics.py  4_Exonerate.py  5_Primers.py  5_Tree_Visualization.py  6_Workflow.py  7_Reference_Taxa.py  8_Alignment_Prep.py  8_Codon_Tip_Prep.py  9_Alignment_Prep.py  9_Tree_Visualization.py
src/phylofetch/: __init__.py  assembly_utils.py  blast_loci_utils.py  busco_utils.py  cli.py  codon_prep_utils.py  config.py  exonerate_utils.py  itsx_utils.py  ncbi_utils.py  orthology_utils.py  primer_utils.py  project_manager.py  protein_guide_utils.py  taxon_id_utils.py  tips_utils.py
tests/: conftest.py  test_app_smoke.py  test_assembly_utils.py  test_blast_loci_utils.py  test_blast_runner.py  test_codon_prep_utils.py  test_concat.py  test_exonerate_utils.py  test_itsx_utils.py  test_ncbi_retry.py  test_ncbi_utils.py  test_orthology_utils.py  test_primer_utils.py  test_project_manager.py  test_protein_guide_utils.py  test_taxon_id_utils.py  test_tips_utils.py
tests/fixtures/: contig_minus.fasta  contig_plus.fasta  contig_two.fasta  exo_coding2genome_plus.gff  exo_protein2genome_minus.gff  exo_protein2genome_multi.gff  exo_protein2genome_plus.gff  expected_cds.txt  (+3 more)
(+7 files in other folders)
